gccida/g0/visualize_stall_cycles
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visualize_stall_cycles/src/sched-vis.c:1386:16: error: expected identifier or '('
 struct suffix = "\n"; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visualize_stall_cycles/src/sched-vis.c:1395:13: error: use of undeclared identifier 'prefix_0'
strcpy( pa, prefix_0); 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visualize_stall_cycles/src/sched-vis.c:1396:17: error: use of undeclared identifier 'prefix_0'
p = &pa[strlen( prefix_0)]; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visualize_stall_cycles/src/sched-vis.c:1398:19: error: use of undeclared identifier 'prefix_0'
v3 = v2 - strlen( prefix_0); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visualize_stall_cycles/src/sched-vis.c:1401:16: error: expected identifier or '('
 struct suffix = "[...]\n"; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visualize_stall_cycles/src/sched-vis.c:1403:19: error: use of undeclared identifier 'prefix_0'
v5 = v4 - strlen( prefix_0); 
                  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visualize_stall_cycles/src/obj/sched-vis.o] Error 1
